add publication inforamtion

--- a/publication/journal-article/index.html
+++ b/publication/journal-article/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: January 6, 2024 --><html lang="en-us" >
+<!-- Last Published: January 9, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -823,12 +823,10 @@
 
 
   
-    
-  
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="http://arxiv.org/pdf/1512.04133v1" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="/publication/journal-article/journal-article.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -846,11 +844,7 @@
 
 
 
-  
-  <a class="btn btn-outline-primary btn-page-header" href="/slides/example/" target="_blank">
-    Slides
-  </a>
-  
+
 
 
 
@@ -911,17 +905,25 @@
 
     <div class="space-below"></div>
 
-    <div class="article-style"><div class="alert alert-note">
+    <div class="article-style"><!-- 
+
+<div class="alert alert-note">
   <div>
     Click the <em>Cite</em> button above to demo the feature to enable visitors to import publication metadata into their reference management software.
   </div>
 </div>
+
+
+
+
 <div class="alert alert-note">
   <div>
     Create your slides in Markdown - click the <em>Slides</em> button to check out the example.
   </div>
 </div>
-<p>Add the publication&rsquo;s <strong>full text</strong> or <strong>supplementary notes</strong> here. You can use rich formatting such as including <a href="https://wowchemy.com/docs/content/writing-markdown-latex/" target="_blank" rel="noopener">code, math, and images</a>.</p>
+
+
+Add the publication's **full text** or **supplementary notes** here. You can use rich formatting such as including [code, math, and images](https://wowchemy.com/docs/content/writing-markdown-latex/). -->
 </div>
 
     
