--- a/publication-type/journal-paper/index.html
+++ b/publication-type/journal-paper/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: January 6, 2024 --><html lang="en-us" >
+<!-- Last Published: January 9, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -780,12 +780,10 @@
 
 
   
-    
-  
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="http://arxiv.org/pdf/1512.04133v1" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/journal-article/journal-article.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -803,11 +801,7 @@
 
 
 
-  
-  <a class="btn btn-outline-primary btn-page-header btn-sm" href="/slides/example/" target="_blank">
-    Slides
-  </a>
-  
+
 
 
 
